# potg

./: .dockerignore  .env.inapppurchase.example  .env.new  .gitignore  Dockerfile  README.md  activate_admin.py  entrypoint.sh  pyproject.toml  seed_ratings.py  test_db.py
app/: main.py
app/common/: exceptions.py  response.py
app/core/: config.py  database.py  dependencies.py  mux.py  security.py  upload.py
app/modules/auth/: router.py  schemas.py  service.py  utils.py
app/modules/category/: router.py  schemas.py  service.py
app/modules/coins/: __init__.py  router.py  schemas.py  service.py
app/modules/episode/: router.py  schemas.py  service.py
app/modules/faq/: router.py  schemas.py  service.py
app/modules/language/: router.py  schemas.py  service.py
app/modules/notification/: router.py  schemas.py  service.py
app/modules/purchases/: router.py  schemas.py  service.py  webhook_schemas.py
app/modules/rating/: router.py  schemas.py  service.py
app/modules/rewards/: __init__.py  router.py  schemas.py  service.py
app/modules/series/: router.py  schemas.py  service.py
app/modules/settings/: router.py  schemas.py  service.py
app/modules/subscriptions/: router.py  schemas.py  service.py
app/modules/user_activity/: router.py  schemas.py  service.py
app/modules/users/: router.py  schemas.py  service.py
prisma/: clear_db.py  schema.prisma  seed.py  user_seed.py
prisma/migrations/20260401042911_user/: migration.sql
prisma/migrations/20260402060401_add_series_and_episodes/: migration.sql
(+2 files in other folders)
